# django-readonly-field

./: .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  data.json  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml
django_readonly_field/: apps.py  compiler.py
docs/: conf.py
htmlcov/: class_index.html  d_dafc5b15ce485584___init___py.html  d_dafc5b15ce485584_apps_py.html  d_dafc5b15ce485584_compiler_py.html  function_index.html  index.html  status.json  z_dafc5b15ce485584___init___py.html  z_dafc5b15ce485584_apps_py.html  z_dafc5b15ce485584_compiler_py.html
tests/: test_readonly.py
tests/readonly_app/: models.py  views.py
tests/readonly_app/migrations/: 0001_initial.py  0002_sql_default.py
tests/readonly_project/: settings.py
